Loads model and prints a response

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "fef2a8a2",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
    "source": [
     "print(\"Drunk Philosophers\")\n",
     "\n",
-    "data_raw = pd.read_csv(\"~/Desktop/Drunk-Philosophers/data/philosophy_data.csv\")\n",
+    "data_raw = pd.read_csv(\"./data/philosophy_data.csv\")\n",
     "data_raw = data_raw.drop(['sentence_spacy', 'original_publication_date', 'corpus_edition_date', 'sentence_length', 'sentence_lowered', 'lemmatized_str'], axis=1)\n",
     "philosophers = list(dict.fromkeys(data_raw['author'].tolist()))\n",
     "\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1949ffef",
    "metadata": {},
    "outputs": [
@@ -80,38 +80,40 @@
       "  # This is added back by InteractiveShellApp.init_path()\n",
       "/Users/jackbodine/opt/anaconda3/envs/DeepLearning_Env/lib/python3.7/site-packages/ipykernel_launcher.py:12: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  if sys.path[0] == '':\n",
-      "2022-04-19 10:13:55.772261: I tensorflow/core/platform/cpu_feature_guard.cc:145] This TensorFlow binary is optimized with Intel(R) MKL-DNN to use the following CPU instructions in performance critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "To enable them in non-MKL-DNN operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-04-19 10:13:55.773416: I tensorflow/core/common_runtime/process_util.cc:115] Creating new thread pool with default inter op setting: 16. Tune using inter_op_parallelism_threads for best performance.\n"
+      "  if sys.path[0] == '':\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n"
+      "Epoch 1/1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-19 10:13:57.318703: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2022-04-19 10:13:57.327414: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2022-04-19 10:13:57.352313: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] model_pruner failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss/dense_1_loss/categorical_crossentropy/weighted_loss/concat' has self cycle fanin 'loss/dense_1_loss/categorical_crossentropy/weighted_loss/concat'.\n",
-      "2022-04-19 10:13:57.376075: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] remapper failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss/dense_1_loss/categorical_crossentropy/weighted_loss/concat' has self cycle fanin 'loss/dense_1_loss/categorical_crossentropy/weighted_loss/concat'.\n",
-      "2022-04-19 10:13:57.380925: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] arithmetic_optimizer failed: Invalid argument: The graph couldn't be sorted in topological order.\n",
-      "2022-04-19 10:13:57.385263: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2022-04-19 10:13:57.390839: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2022-04-19 10:13:57.403363: W tensorflow/core/common_runtime/process_function_library_runtime.cc:675] Ignoring multi-device function optimization failure: Invalid argument: The graph couldn't be sorted in topological order.\n"
+      "2022-04-19 11:51:24.656392: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
+      "2022-04-19 11:51:24.662182: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
+      "2022-04-19 11:51:24.677877: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] model_pruner failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_2/dense_3_loss/categorical_crossentropy/weighted_loss/concat' has self cycle fanin 'loss_2/dense_3_loss/categorical_crossentropy/weighted_loss/concat'.\n",
+      "2022-04-19 11:51:24.696539: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] remapper failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_2/dense_3_loss/categorical_crossentropy/weighted_loss/concat' has self cycle fanin 'loss_2/dense_3_loss/categorical_crossentropy/weighted_loss/concat'.\n",
+      "2022-04-19 11:51:24.699929: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:502] arithmetic_optimizer failed: Invalid argument: The graph couldn't be sorted in topological order.\n",
+      "2022-04-19 11:51:24.702993: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
+      "2022-04-19 11:51:24.706984: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
+      "2022-04-19 11:51:24.716920: W tensorflow/core/common_runtime/process_function_library_runtime.cc:675] Ignoring multi-device function optimization failure: Invalid argument: The graph couldn't be sorted in topological order.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 67712/111201 [=================>............] - ETA: 2:06 - loss: 1.8610 - categorical_crossentropy: 1.8610 - accuracy: 0.4570"
+      "889615/889615 [==============================] - 395s 443us/step - loss: 1.7937 - categorical_crossentropy: 1.7937 - accuracy: 0.4580\n",
+      "\n",
+      "----- Generating text after Epoch: 0\n",
+      "----- diversity: 0.5\n",
+      "----- Generating with seed: \" trib\"\n",
+      " tribe one it is soul s or same to then the for that was accept then it one who case the good of the same to say, and large of the many the good and a man who was an accounter to be a state of the law any other of the soul so the other that if the greater is it is it is a particular with who case and poets the only in his one are they are a man which the many. It see the one doubles to the same present\n"
      ]
     }
    ],
@@ -120,7 +122,7 @@
     "char_indices = dict((c, i) for i, c in enumerate(chars))\n",
     "indices_char = dict((i, c) for i, c in enumerate(chars))\n",
     "\n",
-    "seqlen = 40\n",
+    "seqlen = 5\n",
     "step = seqlen\n",
     "sentences = []\n",
     "for i in range(0, len(text) - seqlen - 1, step):\n",
@@ -161,7 +163,7 @@
     "    start_index = random.randint(0, len(text) - seqlen - 1)\n",
     "    \n",
     "    # Q5: What does diversity do?\n",
-    "    diversity = 1.0\n",
+    "    diversity = 0.5\n",
     "    print('----- diversity:', diversity)\n",
     "\n",
     "    generated = ''\n",
@@ -189,8 +191,10 @@
     "\n",
     "model.fit(x, y,\n",
     "          batch_size=128,\n",
-    "          epochs=50,\n",
-    "          callbacks=[print_callback])"
+    "          epochs=1,\n",
+    "          callbacks=[print_callback])\n",
+    "\n",
+    "model.save(\"models/Plato\")"
    ]
   },
   {
